ml-pharma/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pharma-ml
  labels:
    app: pharma-ml
    version: v1.0.0
