ml-pharma/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: pharma-ml
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: pharma-ml
  labels:
    app: streamlit
spec:
  selector:
    app: streamlit
  ports:
  - name: http
    port: 8501
    targetPort: 8501
    protocol: TCP
  type: ClusterIP
